--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,13 @@
     font-family:sans-serif;
     text-align: justify;
 }
+
+.hero h1{
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    padding: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    text-decoration: underline;
+}
